--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.8'
 
 services:
-  # Base de datos PostgreSQL
   postgres:
     image: postgres:13
     container_name: news_postgres
@@ -16,12 +15,19 @@ services:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     restart: unless-stopped
 
-  # Aplicación de scraping
+  redis:
+    image: redis:7-alpine
+    container_name: news_redis
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
+
   scraper:
     build: .
     container_name: news_scraper
     depends_on:
       - postgres
+      - redis
     environment:
       DB_HOST: postgres
       DB_PORT: 5432
@@ -29,23 +35,72 @@ services:
       DB_USER: postgres
       DB_PASSWORD: 123456
       LOG_LEVEL: INFO
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      REDIS_DB: 0
     volumes:
       - ./data:/app/data
       - ./logs:/app/logs
     restart: unless-stopped
-    command: ["python", "scheduler.py", "--mode", "schedule", "--interval", "1"]
+    command: ["python", "scheduler.py", "--mode", "once"]
 
-  # Aplicación web para monitoreo (opcional)
-  web_monitor:
-    image: nginx:alpine
-    container_name: news_web_monitor
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./data:/usr/share/nginx/html/data
+  celery_worker:
+    build: .
+    container_name: news_celery_worker
     depends_on:
-      - scraper
+      - redis
+      - postgres
+    environment:
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_NAME: news_scraping
+      DB_USER: postgres
+      DB_PASSWORD: 123456
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      REDIS_DB: 0
+      CELERY_BROKER_URL: redis://redis:6379/0
+      CELERY_RESULT_BACKEND: redis://redis:6379/0
+    volumes:
+      - ./data:/app/data
+      - ./logs:/app/logs
+    command: ["celery", "-A", "tasks.celery_app", "worker", "--loglevel=INFO", "--concurrency=2"]
+    restart: unless-stopped
+
+  celery_beat:
+    build: .
+    container_name: news_celery_beat
+    depends_on:
+      - redis
+      - postgres
+    environment:
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_NAME: news_scraping
+      DB_USER: postgres
+      DB_PASSWORD: 123456
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      REDIS_DB: 0
+      CELERY_BROKER_URL: redis://redis:6379/0
+      CELERY_RESULT_BACKEND: redis://redis:6379/0
+    volumes:
+      - ./data:/app/data
+      - ./logs:/app/logs
+    command: ["celery", "-A", "tasks.celery_app", "beat", "--loglevel=INFO"]
+    restart: unless-stopped
+
+  flower:
+    image: mher/flower:2.0.1
+    container_name: news_celery_flower
+    depends_on:
+      - redis
+    environment:
+      FLOWER_PORT: 5555
+      CELERY_BROKER_URL: redis://redis:6379/0
+    ports:
+      - "5555:5555"
+    command: ["flower", "--port=5555", "--broker=redis://redis:6379/0"]
     restart: unless-stopped
 
 volumes:
