--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,12 +95,10 @@ services:
     container_name: news_celery_flower
     depends_on:
       - redis
-    environment:
-      FLOWER_PORT: 5555
-      CELERY_BROKER_URL: redis://redis:6379/0
     ports:
       - "5555:5555"
-    command: ["flower", "--port=5555", "--broker=redis://redis:6379/0"]
+    # El entrypoint del contenedor ya es 'flower'; solo pasamos args
+    command: ["--broker=redis://redis:6379/0", "--port=5555"]
     restart: unless-stopped
 
 volumes:
