--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,8 +97,9 @@ services:
       - redis
     ports:
       - "5555:5555"
-    # El entrypoint del contenedor ya es 'flower'; solo pasamos args
-    command: ["--broker=redis://redis:6379/0", "--port=5555"]
+    environment:
+      CELERY_BROKER_URL: redis://redis:6379/0
+    command: ["flower", "--broker=redis://redis:6379/0", "--port=5555"]
     restart: unless-stopped
 
 volumes:
